--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@netlify/functions": "^1.4.0",
     "@prisma/client": "^4.14.1",
-    "@remix-run/css-bundle": "^1.17.0",
-    "@remix-run/netlify": "^1.17.0",
-    "@remix-run/node": "^1.17.0",
-    "@remix-run/react": "^1.17.0",
-    "@remix-run/serve": "^1.17.0",
+    "@remix-run/css-bundle": "1.19.3",
+    "@remix-run/v1-meta": "0.1.1",
+    "@remix-run/netlify": "1.19.3",
+    "@remix-run/node": "1.19.3",
+    "@remix-run/react": "1.19.3",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "isbot": "^3.6.8",
@@ -27,9 +27,9 @@
     "remix-auth-google": "^1.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.17.0",
-    "@remix-run/eslint-config": "^1.17.0",
-    "@remix-run/serve": "^1.17.0",
+    "@remix-run/dev": "1.19.3",
+    "@remix-run/eslint-config": "1.19.3",
+    "@remix-run/serve": "1.19.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
