--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "start": "cross-env NODE_ENV=production netlify dev",
+    "start": "remix-serve ./build/index.js",
     "typecheck": "tsc",
     "postinstall": "prisma generate"
   },
@@ -12,8 +12,6 @@
     "@netlify/functions": "^1.4.0",
     "@prisma/client": "^4.14.1",
     "@remix-run/css-bundle": "1.19.3",
-    "@remix-run/v1-meta": "0.1.1",
-    "@remix-run/netlify": "1.19.3",
     "@remix-run/node": "1.19.3",
     "@remix-run/react": "1.19.3",
     "bcryptjs": "^2.4.3",
@@ -41,6 +39,6 @@
     "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18.0.0"
   }
 }
